--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -211,7 +211,9 @@
                     <span class="icon-king"></span>
                 </div>
             </button>
-            <button class="element btn btn-default">
+            <button data-toggle="modal" 
+                    data-target="#modal-shop"
+                    class="element btn btn-default">
                 <span class="icon-right icon-shop"></span>
             </button>
             <button class="element btn btn-default">
@@ -237,3 +239,4 @@
 
 <div modal-create-game class="modal fade" id="modal-create-game"></div>
 <div modal-challenge class="modal fade" id="modal-challenge"></div>
+<div modal-shop class="modal fade" id="modal-shop"></div>
