change path icomoon css

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <title>Chess</title>
 
         <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/icomoon.css" rel="stylesheet">
+        <link href="css/icomoon/style.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <link ng-if="user.lang == 'ar'" ng-href="css/style.ar.css" rel="stylesheet">
     </head>
