--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,8 @@
         <script src="app/home/home.controllers.js"></script>
         <script src="app/home/home.directives.js"></script>
 
+        <script src="app/ranking/ranking.controllers.js"></script>
+
         <script src="//ads.lfstmedia.com/getad?site=150053"></script>
 
     </body>
