--- a/public/app/ranking/ranking.html
+++ b/public/app/ranking/ranking.html
@@ -16,6 +16,9 @@
                             </tr>
                         </tbody>
                     </table>
+                    <div ng-class="{'loading': loading}">
+                        <div class="loader"></div>
+                    </div>
                 </div>
             </div>
             <div class="element ranking-pagination">
