--- a/public/app/ranking/ranking.html
+++ b/public/app/ranking/ranking.html
@@ -16,9 +16,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <div ng-class="{'loading': loading}">
-                        <div class="loader"></div>
-                    </div>
+                    <loading></loading>
                 </div>
             </div>
             <div class="element ranking-pagination">
