--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,7 @@
             </div>
         </footer>
 
-        <div ng-class="{'show': loading, 'hide': !loading}" class="loading">
-            <div class="loader"></div>
-        </div>
+        <loading></loading>
 
         <div id="fb-root"></div>
 
