--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <div ng-if="ready" ng-view class="app"></div>
 
         <footer>
-            <div class="footer">
+            <div class="footer element">
                 <div id="pub"></div>
 
                 <div class="fb-like-box" data-href="https://www.facebook.com/ChessCommunity" data-width="460" data-height="250" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="false"></div>
