fix bug challenge list

--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -104,7 +104,7 @@
                                 <td class="text-center">{{ challenge.ranking }}</td>
                                 <td class="text-center">
                                     <span class="color">
-                                        <span class="icon-{{ game.color }} icon-king"></span>
+                                        <span class="icon-{{ challenge.color }} icon-king"></span>
                                     </span>
                                 </td>
                                 <td class="text-center">{{ challenge.time / 60 }}:00</td>
