--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,8 @@
         <script src="app/home/home.controllers.js"></script>
         <script src="app/home/home.directives.js"></script>
 
+        <script src="app/game/game.controllers.js"></script>
+
         <script src="app/ranking/ranking.controllers.js"></script>
 
         <script src="app/trophies/trophies.controllers.js"></script>
