first view game

--- a/public/app/ranking/ranking.html
+++ b/public/app/ranking/ranking.html
@@ -7,7 +7,7 @@
                         <tbody>
                             <tr ng-repeat="rank in ranking">
                                 <td class="position">{{ rank.position }}</td>
-                                <td class="img"><img ng-src="https://graph.facebook.com/{{rank.uid}}/picture"></td>
+                                <td class="img"><img class="profile-picture" ng-src="https://graph.facebook.com/{{rank.uid}}/picture"></td>
                                 <td class="name">
                                     <a href>{{ rank.name }}</a>
                                 </td>
