create directive profile game

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
         <script src="app/home/home.directives.js"></script>
 
         <script src="app/game/game.controllers.js"></script>
+        <script src="app/game/game.directives.js"></script>
 
         <script src="app/ranking/ranking.controllers.js"></script>
 
