--- a/public/app/game/game.html
+++ b/public/app/game/game.html
@@ -5,7 +5,7 @@
             <div class="element">
                 <div class="game" ng-class="{'game-white': orientation == 'white', 'game-black': orientation == 'black'}">
                     <div ng-repeat="number in numbers" class="game-row">
-                        <div ng-repeat="letter in letters" class="game-box">
+                        <div ng-repeat="letter in letters" id="{{letter + number}}" class="game-box">
                             <span ng-if="game.pieces[letter + number]" ng-class="getPieceClass('{{letter + number}}')" draggable data-position="{{letter + number}}"></span>
                         </div> 
                     </div>
