--- a/public/app/game/game.html
+++ b/public/app/game/game.html
@@ -3,7 +3,7 @@
         <div class="col-md-8">
             <div class="profile element" profile-game player="player2"></div>
             <div class="element">
-                <div class="game" ng-class="{'game-white': orientation == 'white', 'game-black': orientation == 'black'}">
+                <div class="game no-select" ng-class="{'game-white': orientation == 'white', 'game-black': orientation == 'black'}">
                     <div ng-repeat="number in numbers" class="game-row">
                         <div ng-repeat="letter in letters" id="{{letter + number}}" class="game-box">
                             <span class="piece" ng-class="getPieceClass('{{letter + number}}')" draggable data-position="{{letter + number}}"></span>
