--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
         
         <script src="lib/angular.min.js"></script>
         <script src="lib/angular-route.min.js"></script>
+        <script src="lib/angular-translate.min.js"></script>
+        <script src="lib/angular-translate-loader-static-files.min.js"></script>
 
         <script src="app/app.js"></script>
 
