--- a/public/app/trophies/trophies.html
+++ b/public/app/trophies/trophies.html
@@ -2,12 +2,12 @@
     <div class="row">
         <div class="col-md-10">
             <div class="element trophies">
-                <div ng-repeat="trophy in trophies" class="trophy trophy-{{ trophy.id }} {{ trophy.class }}">
+                <div ng-repeat="trophy in trophies" class="trophy trophy-{{ trophy.id }} {{ trophy.css }}">
                     <div class="description description-{{ trophy.id }}">
                         <span class="icon-bubble"></span>
                         <div class="text">
-                            <h4>{{ trophy.title }}</h4>
-                            <p>{{ trophy.description }}</p>
+                            <h4>{{ 'trophies.content.' + trophy.id + '.title'|translate }}</h4>
+                            <p>{{ 'trophies.content.' + trophy.id + '.description'|translate }}</p>
                         </div>
                     </div>
                 </div>
