add modal offer draw & resign

--- a/public/app/game/game.html
+++ b/public/app/game/game.html
@@ -1,7 +1,7 @@
 <div class="content no-select">
     <div class="row">
         <div class="col-md-10">
-            <div class="profile element" profile-game player="player2"></div>
+            <div class="profile profile-game element" profile-game player="player2"></div>
             <div class="notation">
                 <div class="element">
                     <div ng-repeat="notation in player1.notation">{{ notation }}</div>
@@ -22,7 +22,7 @@
                     </div>
                 </div>
             </div>
-            <div class="profile element" profile-game player="player1"></div>
+            <div class="profile profile-game element" profile-game player="player1"></div>
         </div>
     </div>
 </div>
