fix and add action resign

--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -13,7 +13,7 @@
                 </div>
                 <div>
                     <span>{{ 'points'|translate }}: </span>
-                    <strong>{{ 'points'|translate }}</strong>
+                    <strong>{{ user.points }}</strong>
                 </div>
                 <div>
                     <span>{{ 'ranking'|translate }}: </span>
