--- a/public/app/game/game.html
+++ b/public/app/game/game.html
@@ -28,3 +28,4 @@
 </div>
 
 <div modal-promotion class="modal fade" id="modal-promotion"></div>
+<div modal-response-draw class="modal fade" id="modal-response-draw"></div>
