--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -26,7 +26,7 @@
                 <h2>
                     <span>{{ 'games'|translate }}</span>
                     <span class="info-tooltip">{{ filteredCreatedGames.length || 0 }}</span>
-                    <div class="navbar-right">
+                    <div class="pull-right">
                         <div dropdown-filter-game class="btn-right"></div>
                         <div toggle-element class="btn-right"></div>
                     </div>
@@ -79,7 +79,7 @@
                 <h2>
                     <span>{{ 'challenges'|translate }}</span>
                     <span class="info-tooltip">{{ challenges.length }}</span>
-                    <div class="navbar-right">
+                    <div class="pull-right">
                         <div toggle-element class="btn-right"></div>
                     </div>
                 </h2>
@@ -125,7 +125,7 @@
                 <h2>
                     <span>{{ 'challengers'|translate }}</span>
                     <span class="info-tooltip">{{ filteredChallengers.length || 0 }}</span>
-                    <div class="navbar-right">
+                    <div class="pull-right">
                         <div dropdown-filter-challenger class="btn-right"></div>
                         <div toggle-element class="btn-right"></div>
                     </div>
@@ -169,7 +169,7 @@
                 <h2>
                     <span>{{ 'friends'|translate }}</span>
                     <span class="info-tooltip">{{ friends.length }}</span>
-                    <div class="navbar-right">
+                    <div class="pull-right">
                         <div toggle-element class="btn-right"></div>
                     </div>
                 </h2>
