add finish game

--- a/public/app/game/game.html
+++ b/public/app/game/game.html
@@ -29,3 +29,4 @@
 
 <div modal-promotion class="modal fade" id="modal-promotion"></div>
 <div modal-response-draw class="modal fade" id="modal-response-draw"></div>
+<div modal-finish-game class="modal fade" id="modal-finish-game"></div>
