--- a/public/app/game/game.html
+++ b/public/app/game/game.html
@@ -4,10 +4,10 @@
             <div class="profile profile-game element" profile-game player="player2"></div>
             <div class="notation">
                 <div class="element">
-                    <div ng-repeat="notation in player1.notation">{{ notation }}</div>
+                    <div ng-repeat="notation in player1.notation track by $index">{{ notation }}</div>
                 </div>
                 <div class="element">
-                    <div ng-repeat="notation in player2.notation">{{ notation }}</div>
+                    <div ng-repeat="notation in player2.notation track by $index">{{ notation }}</div>
                 </div>
             </div>
             <div class="game element" ng-class="{'game-white': orientation == 'white', 'game-black': orientation == 'black'}">
