delete game when finish

--- a/public/app/game/game.html
+++ b/public/app/game/game.html
@@ -24,6 +24,7 @@
             </div>
             <div class="profile profile-game element" profile-game player="player1"></div>
         </div>
+        <div ng-show="game.finish" class="col-md-2" col-right></div>
     </div>
 </div>
 
