--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -5,11 +5,11 @@
                 <div class="pull-right">
                     <button data-toggle="modal" data-target="#modal-create-game" class="btn btn-primary">{{ 'create_game' | translate }}</button>
                 </div>
-                <div class="pull-left img">
+                <div profil class="pull-left img">
                     <img class="profile-picture" src="//graph.facebook.com/{{ user.uid }}/picture">
                 </div>
                 <div>
-                    <a href>{{ user.name }}</a>
+                    <a profil href>{{ user.name }}</a>
                 </div>
                 <div>
                     <span>{{ 'points'|translate }}: </span>
