--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
 
         <div ng-if="ready" ng-view class="app"></div>
 
+        <div modal-profil class="modal fade"></div>
+
         <loading></loading>
 
         <div id="fb-root"></div>
