--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
         <div ng-if="ready" ng-view class="app"></div>
 
-        <div modal-profil class="modal fade"></div>
+        <div modal-profile class="modal fade"></div>
 
         <loading></loading>
 
@@ -31,6 +31,7 @@
         <script src="lib/angular-route.min.js"></script>
         <script src="lib/angular-translate.min.js"></script>
         <script src="lib/angular-translate-loader-static-files.min.js"></script>
+        <script src="lib/angular-easypiechart.min.js"></script>
 
         <script src="app/app.js"></script>
 
